Attempt to fix font size of index.html heading on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -35,3 +35,25 @@ h1 {
     85% { color: black; }
     100% { color: chartreuse; }
 }
+
+@media (min-width: 320px) {
+
+}
+
+@media (min-width: 481px) {
+    h1 {
+        font-size: 2rem;
+    }
+}
+
+@media (min-width: 769px) {
+    
+}
+
+@media (min-width: 1025px) {
+    
+}
+
+@media (min-width: 1281px) {
+    
+}
